# axon

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  STATUS.md  dev.sh  test.ax
crates/axon-core/: Cargo.toml
crates/axon-core/src/: ast.rs  borrow.rs  builtins.rs  cache.rs  capabilities.rs  checker.rs  codegen.rs  comptime.rs  doc.rs  error.rs  fmt.rs  infer.rs  lexer.rs  lib.rs  lsp.rs  main.rs  mono.rs  parser.rs  resolver.rs  span.rs  token.rs  types.rs
crates/axon-core/tests/: integration_fixtures.rs
crates/axon-core/tests/fixtures/: adaptive_basic.ax  ai_complete.ax  borrow_errors.ax  chan_spawn.ax  channels.ax  closure_captures.ax  closures.ax  comptime_consts.ax  contained_fail_fs.ax  contained_fail_never.ax  contained_pass.ax  errors_e0301_option_not_unwrapped.ax  errors_e0302_result_ignored.ax  errors_e0303_question_in_non_result.ax  errors_e0305_wrong_arity.ax  errors_e0306_wrong_type.ax  errors_e0307_return_mismatch.ax  errors_e0308_unknown_type.ax  errors_e0309_bad_field.ax  generics.ax  io_builtins.ax  multifile_main.ax  multifile_math.ax  phase10_test_attrs.ax  phase11_fmt_strings.ax  phase12_coverage.ax  phase13_structs.ax  phase14_question_op.ax  phase15_higher_order.ax  phase16_recursive_types.ax  phase17_match_patterns.ax  phase18_string_algorithms.ax  phase19_numeric_algorithms.ax  phase20_state_machines.ax  phase21_error_patterns.ax  phase22_generics_usage.ax  phase23_traits_in_practice.ax  phase24_concurrency.ax  phase25_integration.ax  phase26_comptime.ax  (+61 more)
examples/: adaptive_summarize.ax  ai_complete.ax  algorithms.ax  enums.ax  (+22 more)
(+18 files in other folders)
