[workspace]
members = ["crates/axon-core", "crates/axon-rt", "crates/axon-ai"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["cklaus"]
license = "MIT"

[workspace.dependencies]
logos = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = 1
codegen-units = 16
